--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -1,163 +1,11 @@
-/*
-To customize the look and feel of Ionic, you can override the variables
-in ionic's _variables.scss file.
-
-For example, you might change some of the default colors:
-
-$light:                           #fff !default;
-$stable:                          #f8f8f8 !default;
-$positive:                        #4a87ee !default;
-$calm:                            #43cee6 !default;
-$balanced:                        #66cc33 !default;
-$energized:                       #f0b840 !default;
-$assertive:                       #ef4e3a !default;
-$royal:                           #8a6de9 !default;
-$dark:                            #444 !default;
-*/
-
-// The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
+@import "fonts";
+@import "root";
+@import "home";
+@import "stats";
+@import "gallery";
 
-@font-face
-{
-  font-family: ProCentroSlabBlack;
-  src: url(../lib/ionic/fonts/PFCentroSlabPro-Black.otf);
-}
-@font-face
-{
-  font-family: ProCentroSlabBlackItalic;
-  src: url(../lib/ionic/fonts/PFCentroSlabPro-BlackItalic.otf);
-}
-@font-face
-{
-  font-family: ProCentroSlabBold;
-  src: url(../lib/ionic/fonts/PFCentroSlabPro-Bold.otf);
-}
-@font-face
-{
-  font-family: ProCentroSlabLight;
-  src: url(../lib/ionic/fonts/PFCentroSlabPro-Light.otf);
-}
-@font-face
-{
-  font-family: ProCentroSlabMedium;
-  src: url(../lib/ionic/fonts/PFCentroSlabPro-Medium.otf);
-}
-@font-face
-{
-  font-family: ProCentroSlabRegular;
-  src: url(../lib/ionic/fonts/PFCentroSlabPro-Regular.otf);
-}
-@font-face
-{
-  font-family: ProCentroSlabThin;
-  src: url(../lib/ionic/fonts/PFCentroSlabPro-Thin.otf);
-}
-.pane{
-  background:url("../img/background.png") no-repeat;
-  background-size: 100% 100%;
-}
-h1.app-header{
-  font-family: ProCentroSlabMedium;
-  font-size: 2.3em;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 8%;
-  position: relative;
-  color: #ffffff;
-  width: 8em;
-}
 
-.home-floating-pane-outer {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 5%;
-  background:  #ffffff;
-  padding: 1px;
-}
-
-.home-floating-pane-inner{
-  width: 98%;
-  border: 3px solid lightblue;
-  margin: 1%;
-}
-.pane, .view {
-  position: inherit;
-}
-.tabs {
-  top: 0px;
-  position: inherit;
-  padding: 5px;
-}
-.tab-item .icon {
-  font-size: 20px;
-  position: relative;
-  padding-top: 10px;
-  color: #008000;
-}
-.tab-item.disable-user-behavior {
-  background-image: -webkit-gradient(
-      linear,
-      left top,
-      left bottom,
-      color-stop(0.01, #5E5858),
-      color-stop(1, #121111)
-  );
-  background-image: -o-linear-gradient(bottom, #5E5858 1%, #121111 100%);
-  background-image: -moz-linear-gradient(bottom, #5E5858 1%, #121111 100%);
-  background-image: -webkit-linear-gradient(bottom, #5E5858 1%, #121111 100%);
-  background-image: -ms-linear-gradient(bottom, #5E5858 1%, #121111 100%);
-  background-image: linear-gradient(to bottom, #5E5858 1%, #121111 100%);
-  color: #fff;
-  border-left: 0.5px solid #000000;
-  border-bottom: 3px solid #008000;
-  font-weight: 500;
-  opacity: 0.9;
-  height: 43px;
-}
-
-.tab-item.tab-item-active {
-opacity: 1;
-}
-h4.tab-home-center-pane-title{
-  color: #ffffff;
-  text-transform:uppercase;
-}
-.tab-home-center-pane {
-  margin: 7em;
-  width: 375px;
-  background:url("../img/modelbackground.png") no-repeat;
-  opacity: 0.9;
-  background-size: 100% 100%;
-  color: #ffffff;
-  padding: 2.5em;
-}
-
-.tab-home-center-pane-outer{
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-}
-.action-button{
-  color: darkslategrey;
-  border: solid 1px #538312;
-  background: #64991e;
-  background: -webkit-gradient(linear, left top, left bottom, from(#7db72f), to(#4e7d0e));
-  background: -moz-linear-gradient(top, #7db72f, #4e7d0e);
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  font-size: 11px;
-  font-weight: 600;
-  padding: 9px 25px;
-  margin:10px;
-}
-.ignore-action-link{
-  color: #ffffff;
-  font-weight: 500;
-  padding: 10px;
-}
