--- a/platforms/ios/www/css/ionic.app.css
+++ b/platforms/ios/www/css/ionic.app.css
@@ -1,19 +1,3 @@
-/*
-To customize the look and feel of Ionic, you can override the variables
-in ionic's _variables.scss file.
-
-For example, you might change some of the default colors:
-
-$light:                           #fff !default;
-$stable:                          #f8f8f8 !default;
-$positive:                        #4a87ee !default;
-$calm:                            #43cee6 !default;
-$balanced:                        #66cc33 !default;
-$energized:                       #f0b840 !default;
-$assertive:                       #ef4e3a !default;
-$royal:                           #8a6de9 !default;
-$dark:                            #444 !default;
-*/
 /*!
   Ionicons, v1.4.1
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
@@ -6358,6 +6342,10 @@ a.button {
   background: url("../img/background.png") no-repeat;
   background-size: 100% 100%; }
 
+h3 {
+  font-family: procentroslabmedium;
+  text-align: center; }
+
 h1.app-header {
   font-family: ProCentroSlabMedium;
   font-size: 2.3em;
@@ -6387,13 +6375,18 @@ h1.app-header {
 .tabs {
   top: 0px;
   position: inherit;
-  padding: 5px; }
+  padding: 5px;
+  justify-content: left;
+  -webkit-justify-content: left;
+  -moz-justify-content: left;
+  background-image: linear-gradient(to bottom, #5E5858 1%, #121111 100%);
+  background-size: auto auto;
+  border-bottom: 6px solid #008000 !important; }
 
 .tab-item .icon {
   font-size: 20px;
   position: relative;
-  padding-top: 10px;
-  color: #008000; }
+  padding-top: 10px; }
 
 .tab-item.disable-user-behavior {
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.01, #5E5858), color-stop(1, #121111));
@@ -6403,14 +6396,35 @@ h1.app-header {
   background-image: -ms-linear-gradient(bottom, #5E5858 1%, #121111 100%);
   background-image: linear-gradient(to bottom, #5E5858 1%, #121111 100%);
   color: #fff;
-  border-left: 0.5px solid #000000;
-  border-bottom: 3px solid #008000;
+  border-bottom: 5px solid #008000;
   font-weight: 500;
   opacity: 0.9;
   height: 43px; }
 
-.tab-item.tab-item-active {
-  opacity: 1; }
+a.tab-item.disable-user-behavior {
+  border-left: 1px solid #000000 !important; }
+
+a + a.tab-item.tab-item-active {
+  opacity: 1;
+  background: -webkit-gradient(linear, left top, left bottom, from(#7db72f), to(#4e7d0e));
+  background: -moz-linear-gradient(top, #7db72f, #4e7d0e); }
+
+ion-tab + a.tab-item.tab-item-active .icon {
+  color: #008000; }
+
+ion-tab + a.tab-item {
+  color: #008000;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.01, #5E5858), color-stop(1, #121111));
+  background-image: -o-linear-gradient(bottom, #5E5858 1%, #121111 100%);
+  background-image: -moz-linear-gradient(bottom, #5E5858 1%, #121111 100%);
+  background-image: -webkit-linear-gradient(bottom, #5E5858 1%, #121111 100%);
+  background-image: -ms-linear-gradient(bottom, #5E5858 1%, #121111 100%);
+  background-image: linear-gradient(to bottom, #5E5858 1%, #121111 100%); }
+
+.tab-home-center-pane-outer {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto; }
 
 h4.tab-home-center-pane-title {
   color: #ffffff;
@@ -6424,11 +6438,6 @@ h4.tab-home-center-pane-title {
   background-size: 100% 100%;
   color: #ffffff;
   padding: 2.5em; }
-
-.tab-home-center-pane-outer {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto; }
 
 .action-button {
   color: darkslategrey;
@@ -6448,3 +6457,138 @@ h4.tab-home-center-pane-title {
   color: #ffffff;
   font-weight: 500;
   padding: 10px; }
+
+.lineChartWrapper, .areaChartWrapper {
+  margin: 15px auto;
+  width: 500px;
+  height: 200px;
+  text-align: center; }
+
+select.line-green {
+  background-color: #f5f5f5;
+  border-bottom: 5px solid #008000;
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 16em;
+  font-size: 1em;
+  font-family: procentroslabmedium; }
+
+select.line-blue {
+  background-color: #f5f5f5;
+  border-bottom: 5px solid cornflowerblue;
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 16em;
+  font-size: 1em;
+  font-family: procentroslabmedium; }
+
+.line-green > option, .line-blue > option {
+  font-size: 1em;
+  font-family: procentroslabmedium;
+  padding: 10px; }
+
+.carouselTitle {
+  display: none; }
+
+.roundabout-holder {
+  list-style: none;
+  padding: 50px;
+  margin-left: 35%;
+  margin-top: 40px;
+  height: 11em;
+  width: 11em;
+  background: -webkit-gradient(linear, left top, left bottom, from(#7db72f), to(#4e7d0e));
+  background: -moz-linear-gradient(top, #7db72f, #4e7d0e);
+  /*background: forestgreen;*/ }
+
+.roundabout-moveable-item {
+  height: 7em;
+  width: 10em;
+  background-color: #ccc;
+  border: 1px solid #999; }
+
+.roundabout-in-focus {
+  cursor: auto; }
+
+li img {
+  width: 10em;
+  height: 7em; }
+
+.flex-container {
+  /*  display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -moz-flex-flow:row wrap;
+    -webkit-flex-flow: row wrap;*/
+  display: -ms-flexbox;
+  -ms-box-orient: horizontal;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  -webkit-flex-flow: row wrap;
+  -moz-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  background-color: #3D3C3A;
+  width: 83%;
+  margin-left: 7%;
+  margin-right: 7%;
+  /*  width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left:5%;
+    padding-top: 2%;
+    padding-bottom: 2%;*/ }
+
+.flex-item {
+  background: #f5f5f5;
+  width: 115px;
+  height: 80px;
+  color: white;
+  margin: 22px; }
+
+.next {
+  bottom: 16px;
+  left: 63%;
+  position: relative; }
+
+.prev {
+  bottom: 34px;
+  left: 23%;
+  position: relative;
+  width: 80px; }
+
+.p10 {
+  padding: 10px; }
+
+.gallery-allpictures-picture {
+  width: 115px;
+  height: 80px;
+  padding: 5px; }
+
+.gallery-allpictures {
+  background-color: #f5f5f5;
+  height: 95px; }
+
+.gallery-allpictures-subtitle {
+  position: relative;
+  bottom: 10px;
+  color: #2f4f4f;
+  font-family: ProCentroSlabMedium;
+  text-transform: uppercase;
+  padding: 2px;
+  padding-left: 10px;
+  font-size: 0.75em; }
+
+.roundabout-in-focus > .carouselTitle {
+  text-align: center;
+  color: #ffffff;
+  font-family: procentroslabbold;
+  display: block;
+  white-space: nowrap;
+  width: 10em;
+  overflow: hidden;
+  text-overflow: ellipsis; }
